# sb-memory-allocator

./: .travis.yml  README.md  license.txt  makefile  readme.md
sb/: .gitignore  CMakeLists.txt  main.cpp
sb/sb_memory/: CMakeLists.txt
sb/sb_memory/include/sb/: align.hpp  allocation_exception.hpp  data.hpp  defs.hpp  fallback_allocator.hpp  heap_allocator.hpp  mem.hpp  memalign.hpp  memalloc.hpp  memdefs.hpp  memout.hpp  null_allocator.hpp  segregator_allocator.hpp  singleton_allocator.hpp  stack_allocator.hpp  throw_allocator.hpp
sb/sb_memory_tests/: CMakeLists.txt
sb/sb_memory_tests/general_tests/: CMakeLists.txt  sb_data_test.cpp  sb_heap_allocator_test.cpp  sb_null_allocator_test.cpp  sb_stack_allocator_test.cpp  sb_throw_allocator_test.cpp  tmp_test.cpp
sb/sb_memory_tests/lib/gtest-1.7.0/: Makefile.am
sb/sb_memory_tests/lib/gtest-1.7.0/cmake/: internal_utils.cmake
